# Kinetic_Drizzle_code

./: .gitignore  CMakeLists.txt  eim_config.toml  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Rain_Types.c  Rain_Types.h  actuation.c  actuation.h  config.h  helper_functions.c  helper_functions.h  main.c  main.h  main_tasks.c  main_tasks.h  rain_compute.c  rain_compute.cpp  rain_compute.h  rain_compute.hpp
python/: test.py
simulation/: CMakeLists.txt  README.md  drops_plot.py  main.cpp  simulation.py
